# Weave

./: .gitignore  CMakeLists.txt  main.cpp
3P/: vma.h
Modules/Render/: Buffer.ixx  Check.ixx  Command.ixx  Descriptor.ixx  Device.ixx  Draw.ixx  File.ixx  Gltf.ixx  Gui.ixx  Image.ixx  Instance.ixx  Memory.ixx  Mesh.ixx  Pipeline.ixx  Scene.ixx  Shader.ixx  Surface.ixx  Swapchain.ixx  Synchro.ixx
Shaders/: colored_tri.vert  sky.comp  tri_mesh.vert  tri_mesh.vert.spv
vk-bootstrap/: cmake_install.cmake
